[gd_scene load_steps=25 format=3 uid="uid://cym1d66ppmjde"]

[ext_resource type="PackedScene" uid="uid://dppp2wm016vko" path="res://entities/player/player.tscn" id="1_ndxrh"]
[ext_resource type="Script" uid="uid://ccbj2cctno5ra" path="res://script/world/world_1.gd" id="1_yntov"]
[ext_resource type="Script" uid="uid://b6qsg3ckomqju" path="res://script/entities/enemy_spawner.gd" id="3_wfwh0"]
[ext_resource type="PackedScene" uid="uid://bwjvy0m0aget5" path="res://entities/enemy/enemy.tscn" id="4_it4dk"]
[ext_resource type="PackedScene" uid="uid://bnpg3pqpju40w" path="res://entities/enemy/boss_lvl_1.tscn" id="5_4bc2o"]
[ext_resource type="Script" uid="uid://blh2f51y6lnte" path="res://script/world/parallax_background.gd" id="5_7infk"]
[ext_resource type="PackedScene" uid="uid://cvsgd2p7rd3d2" path="res://entities/enemy/spinning_enemy.tscn" id="5_yf67o"]
[ext_resource type="Texture2D" uid="uid://cobskgmkbuwxa" path="res://assets/textures/env/background/bg_space.jpg" id="6_7infk"]
[ext_resource type="PackedScene" uid="uid://cwbrtgaind525" path="res://entities/enemy/fast_enemy.tscn" id="6_d1lvk"]
[ext_resource type="Script" uid="uid://d2wdjq6wvmqe6" path="res://script/world/scenery_spawner.gd" id="10_1rtl4"]
[ext_resource type="PackedScene" uid="uid://dp8vmcqok4kgj" path="res://entities/enemy/tanker_enemy.tscn" id="11_2v24y"]
[ext_resource type="PackedScene" uid="uid://d3xkig5wdjc3f" path="res://entities/env/planet1.tscn" id="11_dbf1f"]
[ext_resource type="PackedScene" uid="uid://ck2tjwdvuhg1k" path="res://entities/enemy/meteor.tscn" id="12_nxpbw"]
[ext_resource type="PackedScene" uid="uid://bn2t8ua3pm008" path="res://entities/env/planet_2.tscn" id="12_rfjkb"]
[ext_resource type="PackedScene" uid="uid://c4lw2exxijmyp" path="res://entities/env/planet_3.tscn" id="13_4nudr"]
[ext_resource type="PackedScene" uid="uid://diaifoesy1rsu" path="res://entities/env/planet_4.tscn" id="14_4bc2o"]
[ext_resource type="PackedScene" uid="uid://bm3ailqdl5nb0" path="res://entities/env/planet_5.tscn" id="15_7infk"]
[ext_resource type="PackedScene" uid="uid://dghv2id4xeu06" path="res://entities/env/asteorid.tscn" id="16_ghyt1"]
[ext_resource type="PackedScene" uid="uid://yg1nojm6jyvy" path="res://entities/env/blackhole.tscn" id="17_2v24y"]
[ext_resource type="AudioStream" uid="uid://40dkcxwnm2li" path="res://assets/audio/Music/World1BGM.wav" id="19_7infk"]
[ext_resource type="Script" uid="uid://ws18hti8lpsu" path="res://script/world/camera_shaker.gd" id="20_4bc2o"]
[ext_resource type="AudioStream" uid="uid://di3i3y3abjpm7" path="res://assets/audio/Music/BossMusic.mp3" id="21_7infk"]
[ext_resource type="PackedScene" uid="uid://c3nfa6rei6g6q" path="res://ui/main_hud.tscn" id="22_ghyt1"]

[sub_resource type="Curve2D" id="Curve2D_31iyo"]
_data = {
"points": PackedVector2Array(0, 0, 0, 0, 34, -115, 0, 0, 0, 0, 480, -115)
}
point_count = 2

[node name="World 1" type="Node2D"]
script = ExtResource("1_yntov")
player_scene = ExtResource("1_ndxrh")
boss_scene = ExtResource("5_4bc2o")
boss_music = ExtResource("21_7infk")

[node name="ParallaxBackground" type="ParallaxBackground" parent="."]

[node name="ParallaxLayer" type="ParallaxLayer" parent="ParallaxBackground"]
z_index = -100
motion_mirroring = Vector2(0, 960)
script = ExtResource("5_7infk")

[node name="Sprite2D" type="Sprite2D" parent="ParallaxBackground/ParallaxLayer"]
z_index = -100
texture_repeat = 2
position = Vector2(-47, 0)
scale = Vector2(1.16111, 1)
texture = ExtResource("6_7infk")
centered = false

[node name="PlayerSpawn" type="Marker2D" parent="."]
position = Vector2(271, 788)

[node name="PlayerEndSpawn" type="Marker2D" parent="."]
position = Vector2(267, -64)

[node name="BossSpawn" type="Marker2D" parent="."]
position = Vector2(270, 186)

[node name="BossPathPoints" type="Node2D" parent="."]

[node name="LeftMovePoint" type="Marker2D" parent="BossPathPoints"]
position = Vector2(60, 0)

[node name="RightMovePoint" type="Marker2D" parent="BossPathPoints"]
position = Vector2(475, 0)

[node name="Path1" type="Marker2D" parent="BossPathPoints"]
position = Vector2(363, 297)

[node name="Path2" type="Marker2D" parent="BossPathPoints"]
position = Vector2(193, 287)

[node name="Path3" type="Marker2D" parent="BossPathPoints"]
position = Vector2(134, 100)

[node name="Path4" type="Marker2D" parent="BossPathPoints"]
position = Vector2(413, 100)

[node name="EnemySpawner" type="Node" parent="."]
script = ExtResource("3_wfwh0")
normal_enemy_scene = ExtResource("4_it4dk")
spinning_enemy_scene = ExtResource("5_yf67o")
speed_enemy_scene = ExtResource("6_d1lvk")
tanker_enemy_scene = ExtResource("11_2v24y")
meteor_scene = ExtResource("12_nxpbw")

[node name="LeftSpawn" type="Marker2D" parent="EnemySpawner"]
position = Vector2(170, -13)

[node name="MiddleSpawn" type="Marker2D" parent="EnemySpawner"]
position = Vector2(268, -19)

[node name="RightSpawn" type="Marker2D" parent="EnemySpawner"]
position = Vector2(382, -13)

[node name="RightEndSpawn" type="Marker2D" parent="EnemySpawner"]
position = Vector2(476, -13)

[node name="LeftEndSpawn" type="Marker2D" parent="EnemySpawner"]
position = Vector2(82, -12)

[node name="Timer" type="Timer" parent="EnemySpawner"]
one_shot = true

[node name="ScenerySpawner" type="Node2D" parent="."]
z_index = -1
script = ExtResource("10_1rtl4")
scenery_scenes = Array[PackedScene]([ExtResource("11_dbf1f"), ExtResource("12_rfjkb"), ExtResource("13_4nudr"), ExtResource("14_4bc2o"), ExtResource("15_7infk"), ExtResource("16_ghyt1"), ExtResource("17_2v24y")])

[node name="Timer" type="Timer" parent="ScenerySpawner"]

[node name="Path2D" type="Path2D" parent="ScenerySpawner"]
curve = SubResource("Curve2D_31iyo")

[node name="PathFollow2D" type="PathFollow2D" parent="ScenerySpawner/Path2D"]
position = Vector2(34, -115)

[node name="BackgroundMusic" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("19_7infk")
volume_db = 2.726

[node name="BossBackgroundMusic" type="AudioStreamPlayer2D" parent="."]
process_mode = 3
stream = ExtResource("21_7infk")
volume_db = 1.017

[node name="Camera2D" type="Camera2D" parent="."]
anchor_mode = 0

[node name="CameraShaker" type="Node" parent="Camera2D" groups=["camera_shaker"]]
script = ExtResource("20_4bc2o")

[node name="ShakeTimer" type="Timer" parent="Camera2D/CameraShaker"]
one_shot = true

[node name="MainHUD" parent="." instance=ExtResource("22_ghyt1")]

[connection signal="timeout" from="EnemySpawner/Timer" to="EnemySpawner" method="_on_spawn_timer_timeout"]
[connection signal="timeout" from="ScenerySpawner/Timer" to="ScenerySpawner" method="_on_timer_timeout"]
